<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fitness2"
    tools:context=".Start"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="0dp"
        android:layout_marginBottom="128dp"
        android:layout_marginTop="231dp"
        android:text="@string/main_text_title"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/start_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/main_text_title" />

    <Button
        android:id="@+id/start_button_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/my_style"
        android:text="@string/main_button_login"
        app:layout_constraintBottom_toTopOf="@+id/start_button_register"
        app:layout_constraintEnd_toEndOf="@+id/start_button_register"
        app:layout_constraintStart_toStartOf="@+id/start_button_register"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/start_button_register"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/my_style"
        android:text="@string/main_button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button_login" />

</android.support.constraint.ConstraintLayout>