<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fitness2">

    <EditText
        android:id="@+id/register_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/register_text_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/register_text_password"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_name" />

    <EditText
        android:id="@+id/register_edit_surepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/register_text_surepassword"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_password" />

    <TextView
        android:id="@+id/register_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/register_text_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_edit_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/register_text_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_edit_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_text_surepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_text_surepassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_edit_surepassword" />

    <Button
        android:id="@+id/register_button_sure"
        android:layout_width="156dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/my_style"
        android:text="@string/register_button_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_surepassword" />

    <TextView
        android:id="@+id/register_text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/register_text_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_spinner_status"
        app:layout_constraintEnd_toStartOf="@+id/register_spinner_status"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/register_spinner_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_text_status"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_surepassword" />

</android.support.constraint.ConstraintLayout>