<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fitness2"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/login_button_sure"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginBottom="145dp"
        android:layout_marginTop="145dp"
        android:background="@drawable/my_style"
        android:text="@string/login_button_sure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_name" />

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/login_text_password"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_name" />

    <EditText
        android:id="@+id/login_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_text_password"
        app:layout_constraintStart_toEndOf="@+id/login_text_name" />

    <TextView
        android:id="@+id/login_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/login_text_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_edit_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="255dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/login_text_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>